# Sketch

./: README.md  main.py  pyproject.toml
Sketch/: __init__.py  canvas-classes.py  database.db  models.py  routes.py
Sketch/static/scripts/: drawapp.js  sidebar.js
Sketch/static/styles/: base.css  draw-room.css  forms.css  sidebar.css
Sketch/templates/: 404error.html  base.html  confirm.html  draw-page.html  garry.html  index.html  login.html  logoThing.html  recover.html  resetpass.html  settings.html  signup.html  testSideBar.html  unauthorized.html
